--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -2,7 +2,7 @@
 @import 'primeicons/primeicons.css';
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400&display=swap');
 
-@import "flag-icons/css/flag-icons.min.css";
+@import 'flag-icons/css/flag-icons.min.css';
 
 @theme inline {
   --color-brand-50: var(--p-brand-50);
